; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19112.c_send_packet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19112.c_send_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_packet(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [2 x i8], align 1
  %9 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = getelementptr inbounds [2 x i8], [2 x i8]* %8, i64 0, i64 0
  store i8* %10, i8** %9, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %9, align 8
  %13 = call i32 @PUTSHORT(i32 %11, i8* %12)
  %14 = load i32, i32* %5, align 4
  %15 = getelementptr inbounds [2 x i8], [2 x i8]* %8, i64 0, i64 0
  %16 = call i32 @write(i32 %14, i8* %15, i32 2)
  %17 = icmp ne i32 %16, 2
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

19:                                               ; preds = %3
  %20 = load i32, i32* %5, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @write(i32 %20, i8* %21, i32 %22)
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i32 -1, i32* %4, align 4
  br label %28

27:                                               ; preds = %19
  store i32 1, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %26, %18
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @PUTSHORT(i32, i8*) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
